--- a/classproject/005tindog/TinDog-Start-master/index.html
+++ b/classproject/005tindog/TinDog-Start-master/index.html
@@ -1,273 +1,276 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <meta charset="utf-8">
-    <title>tindog</title>
-    <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
+<head>
+  <meta charset="utf-8">
+  <title>tindog</title>
+  <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
 
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+    rel="stylesheet">
 
-    <!-- Font Awesome -->
-    <script src="https://kit.fontawesome.com/740510e010.js" crossorigin="anonymous"></script>
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/740510e010.js" crossorigin="anonymous"></script>
 
-    <!-- Style Sheets -->
-    <link rel="stylesheet" href="css/styles.css">
+  <!-- Style Sheets -->
+  <link rel="stylesheet" href="css/styles.css">
 
-  </head>
+</head>
 
-  <body>
-    <section id="title">
-      <div class="container-fluid title-containter">
+<body>
+  <section id="title">
+    <div class="container-fluid title-containter">
 
-        <!-- Nav Bar -->
-        <nav class="navbar navbar-expand-lg navbar-dark">
-          <!-- brand name -->
-          <a class="navbar-brand" href="">
-            tindog
-          </a>
-          <!-- navbar toggler -->
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <!-- nav items -->
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto">
+      <!-- Nav Bar -->
+      <nav class="navbar navbar-expand-lg navbar-dark">
+        <!-- brand name -->
+        <a class="navbar-brand" href="">
+          tindog
+        </a>
+        <!-- navbar toggler -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- nav items -->
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto">
 
-              <li class="nav-item">
-                  <a class="nav-link" href="">
-                    Contact
-                  </a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="">
-                    Pricing
-                  </a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="">
-                    Download
-                  </a>
-              </li>
-            </ul>
-          </div>
-        </nav>
-
-        <!-- Title -->
-        <div class="row">
-
-          <div class="col-lg-6 button-group">
-            <h1 class="intro">
-              Meet new and interesting dogs nearby.
-            </h1>
-            <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i>
-              Download 1
-            </button>
-            <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i>
-              Download 2
-            </button>
-          </div>
-
-          <div class="col-lg-6">
-            <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
-          </div>
-
+            <li class="nav-item">
+              <a class="nav-link" href="">
+                Contact
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">
+                Pricing
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">
+                Download
+              </a>
+            </li>
+          </ul>
         </div>
+      </nav>
 
-      </div>
-      
-    </section>
-
-
-    <!-- Features -->
-
-    <section id="features">
+      <!-- Title -->
       <div class="row">
 
-        <div class="col-lg-4 feature">
-          <div class="text-center">
-            <i class="fas fa-check-circle fa-4x features-icon"></i>
-          </div>
-          <h3>Easy to use.</h3>
-          <p>So easy to use, even your dog could do it.</p>
+        <div class="col-lg-6 button-group">
+          <h1 class="intro">
+            Meet new and interesting dogs nearby.
+          </h1>
+          <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i>
+            Download 1
+          </button>
+          <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i>
+            Download 2
+          </button>
         </div>
 
-        <div class="col-lg-4 feature">
-          <div class="text-center">
-            <i class="fas fa-bullseye fa-4x features-icon"></i>
-          </div>
-          <h3>Elite Clientele</h3>
-          <p>We have all the dogs, the greatest dogs.</p>
-        </div>
-      
-        <div class="col-lg-4 feature">
-          <div class="text-center">
-            <i class="fas fa-heart fa-4x features-icon"></i>
-          </div>
-          <h3>Guaranteed to work.</h3>
-          <p>Find the love of your dog's life or your money back.</p>
+        <div class="col-lg-6">
+          <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
         </div>
 
       </div>
 
-    </section>
+    </div>
+
+  </section>
 
 
-    <!-- Testimonials -->
+  <!-- Features -->
 
-    <!-- <section id="testimonials"> -->
-    <section id="testimonial-carousel" class="carousel slide" data-interval="false" data-pause="hover">
-      <ol class="carousel-indicators">
-        <li data-target="#testimoni" data-slide-to="0" class="active"></li>
-        <li data-target="#testimoni" data-slide-to="1"></li>
-        <li data-target="#testimoni" data-slide-to="2"></li>
-        <!-- <li data-target="#carouselExampleIndicators" data-slide-to="2"></li> -->
-      </ol>
+  <section id="features">
+    <div class="row">
 
-      <div class="carousel-inner">
-        <div class="carousel-item testi active" >
-          <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-          <img src="images/dog-img.jpg" alt="dog-profile" class="testimonial-image">
-          <em>Pebbles, New York</em>
+      <div class="col-lg-4 feature">
+        <div class="text-center">
+          <i class="fas fa-check-circle fa-4x features-icon"></i>
         </div>
-
-        <div class="carousel-item testi">
-          <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-          <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-          <em>Beverly, Illinois</em>
-        </div>
-
-        <div class="carousel-item testi">
-          <h2 class="testimonial-text">I'm Maru! I'm a cute black and white tabby with TONS of Energy.</h2>
-          <img class="testimonial-image" src="images/maru.jpg" alt="maru-profile">
-          <em>Maru Little Bean Mullet Pom Pom Leader Chibi McIntyre, British Columbia Canada</em>
-        </div>
-
-        <a class="carousel-control-prev" href="#testimonial-carousel" role="button" data-slide="prev">
-          <!-- Took this > aria-hidden="true" < out of the below span for simplicity.  Add it and the commented out section below the span to add screen reader friendliness-->
-          <span class="carousel-control-prev-icon"></span>
-          <!-- <span class="sr-only">Previous</span> -->
-        </a>
-
-        <a class="carousel-control-next" href="#testimonial-carousel" role="button" data-slide="next">
-          <!-- Took this > aria-hidden="true" < out of the below span for simplicity.  Add it and the commented out section below the span to add screen reader friendliness-->
-          <span class="carousel-control-next-icon"></span>
-          <!-- <span class="sr-only">Next</span> -->
-        </a>
-
-      </div>
-      <!-- </div> -->
-
-    </section>
-
-    <!-- Press -->
-
-    <section id="press">
-      <!-- techcrunch image broken link -->
-      <!-- <img src="images/techcrunch.png" alt="tc-logo"> -->
-      <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
-      <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
-      <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
-
-    </section>
-
-
-    <!-- Pricing -->
-
-    <section id="pricing">
-
-      <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-        <h1 class="display-4">A Plan for Every Dog's Needs</h1>
-        <p class="lead">Simple and affordable price plans for your and your dog.</p>
+        <h3>Easy to use.</h3>
+        <p>So easy to use, even your dog could do it.</p>
       </div>
 
+      <div class="col-lg-4 feature">
+        <div class="text-center">
+          <i class="fas fa-bullseye fa-4x features-icon"></i>
+        </div>
+        <h3>Elite Clientele</h3>
+        <p>We have all the dogs, the greatest dogs.</p>
+      </div>
 
-      <div class="row text-center">
-        <div class="col-md-6 col-lg-4">
-          <div class="card mb-4 box-shadow">
-            <div class="card-header">
-              <!-- <h4 class="my-0 font-weight-normal">Free</h4> -->
-              <h3>Chihuahua</h3>
-              <h2>Free</h2>
-            </div>
-            <div class="card-body">
-              <ul class="list-unstyled mt-3 mb-4">
-                <li> <p>5 Matches Per Day</p> </li>
-                <li> <p>10 Messages Per Day</p> </li>
-                <li> <p>Unlimited App Usage</p> </li>
-              </ul>
-              <button type="button" class="btn btn-lg btn-block btn-outline-dark">Sign Up</button>
-            </div>
+      <div class="col-lg-4 feature">
+        <div class="text-center">
+          <i class="fas fa-heart fa-4x features-icon"></i>
+        </div>
+        <h3>Guaranteed to work.</h3>
+        <p>Find the love of your dog's life or your money back.</p>
+      </div>
+
+    </div>
+
+  </section>
+
+
+  <!-- Testimonials -->
+
+  <!-- <section id="testimonials"> -->
+  <section id="testimonial-carousel" class="carousel slide" data-interval="false" data-pause="hover">
+    <ol class="carousel-indicators">
+      <li data-target="#testimoni" data-slide-to="0" class="active"></li>
+      <li data-target="#testimoni" data-slide-to="1"></li>
+      <li data-target="#testimoni" data-slide-to="2"></li>
+      <!-- <li data-target="#carouselExampleIndicators" data-slide-to="2"></li> -->
+    </ol>
+
+    <div class="carousel-inner">
+      <div class="carousel-item testi active">
+        <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+        <img src="images/dog-img.jpg" alt="dog-profile" class="testimonial-image">
+        <em>Pebbles, New York</em>
+      </div>
+
+      <div class="carousel-item testi">
+        <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of
+          their life. I think.</h2>
+        <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
+        <em>Beverly, Illinois</em>
+      </div>
+
+      <div class="carousel-item testi">
+        <h2 class="testimonial-text">I'm Maru! I'm a cute black and white tabby with TONS of Energy.</h2>
+        <img class="testimonial-image" src="images/maru.jpg" alt="maru-profile">
+        <em>Maru Little Bean Mullet Pom Pom Leader Chibi McIntyre, British Columbia Canada</em>
+      </div>
+
+      <a class="carousel-control-prev" href="#testimonial-carousel" role="button" data-slide="prev">
+        <!-- Took this > aria-hidden="true" < out of the below span for simplicity.  Add it and the commented out section below the span to add screen reader friendliness-->
+        <span class="carousel-control-prev-icon"></span>
+        <!-- <span class="sr-only">Previous</span> -->
+      </a>
+
+      <a class="carousel-control-next" href="#testimonial-carousel" role="button" data-slide="next">
+        <!-- Took this > aria-hidden="true" < out of the below span for simplicity.  Add it and the commented out section below the span to add screen reader friendliness-->
+        <span class="carousel-control-next-icon"></span>
+        <!-- <span class="sr-only">Next</span> -->
+      </a>
+
+    </div>
+    <!-- </div> -->
+
+  </section>
+
+  <!-- Press -->
+
+  <section id="press">
+    <!-- techcrunch image broken link -->
+    <!-- <img src="images/techcrunch.png" alt="tc-logo"> -->
+    <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
+    <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
+    <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
+
+  </section>
+
+
+  <!-- Pricing -->
+
+  <section id="pricing">
+
+    <div class="text-center pricing-header">
+      <h1>A Plan for Every Dog's Needs</h1>
+      <p>Simple and affordable price plans for your and your dog.</p>
+    </div>
+
+
+    <div class="row">
+      <div class="col-md-6 col-lg-4 pricing-column">
+        <div class="card mb-4 box-shadow">
+          <div class="card-header">
+            <!-- <h4 class="my-0 font-weight-normal">Free</h4> -->
+            <h3>Chihuahua</h3>
+            <h2>Free</h2>
+          </div>
+          <div class="card-body">
+            <p>5 Matches Per Day</p>
+            <p>10 Messages Per Day</p>
+            <p>Unlimited App Usage</p>
+            <button type="button" class="btn btn-lg btn-block btn-outline-dark">Sign Up</button>
           </div>
         </div>
-        <div class="col-md-6 col-lg-4">
-          <div class="card mb-4 box-shadow">
-            <div class="card-header">
-              <h3>Labrador</h3>
-              <h2>$49 / mo</h2>
-            </div>
-            <div class="card-body">
-              <ul class="list-unstyled mt-3 mb-4">
-                <li> <p>Unlimited Matches</p> </li>
-                <li> <p>Unlimited Messages</p> </li>
-                <li> <p>Unlimited App Usage</p> </li>
-              </ul>
-              <button type="button" class="btn btn-lg btn-block btn-dark">Sign Up</button>
-            </div>
+      </div>
+      <div class="col-md-6 col-lg-4 pricing-column">
+        <div class="card mb-4 box-shadow">
+          <div class="card-header">
+            <h3>Labrador</h3>
+            <h2>$49 / mo</h2>
+          </div>
+          <div class="card-body">
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+            <button type="button" class="btn btn-lg btn-block btn-dark">Sign Up</button>
           </div>
         </div>
-        <div class="col-md-12 col-lg-4">
-          <div class="card mb-4 box-shadow">
-            <div class="card-header">
-              <h3>Mastiff</h3>
-              <h2>$99 / mo</h2>
-            </div>
-            <div class="card-body">
-              <ul class="list-unstyled mt-3 mb-4">
-                <p>Pirority Listing</p>
-                <p>Unlimited Matches</p>
-                <p>Unlimited Messages</p>
-                <p>Unlimited App Usage</p>
-              </ul>
-              <button type="button" class="btn btn-lg btn-block btn-dark">Sign Up</button>
-            </div>
-          </div> 
+      </div>
+      <div class="col-md-12 col-lg-4 pricing-column">
+        <div class="card mb-4 box-shadow">
+          <div class="card-header">
+            <h3>Mastiff</h3>
+            <h2>$99 / mo</h2>
+          </div>
+          <div class="card-body">
+            <p>Pirority Listing</p>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+            <button type="button" class="btn btn-lg btn-block btn-dark">Sign Up</button>
+          </div>
         </div>
-
       </div>
 
-    </section>
+    </div>
+
+  </section>
 
 
-    <!-- Call to Action -->
+  <!-- Call to Action -->
 
-    <section id="cta">
+  <section id="cta">
 
-      <h3>Find the True Love of Your Dog's Life Today.</h3>
-      <button type="button">Download</button>
-      <button type="button">Download</button>
+    <h3>Find the True Love of Your Dog's Life Today.</h3>
+    <button type="button">Download</button>
+    <button type="button">Download</button>
 
-    </section>
+  </section>
 
 
-    <!-- Footer -->
+  <!-- Footer -->
 
-    <footer id="footer">
+  <footer id="footer">
 
-      <p>© Copyright 2018 TinDog</p>
+    <p>© Copyright 2018 TinDog</p>
 
-    </footer>
+  </footer>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous">
+  </script>
 
-    <script src="js/scripts.js"></script>
+  <script src="js/scripts.js"></script>
 
-  </body>
+</body>
 
 </html>
