--- a/classproject/000courseCompilation/index.html
+++ b/classproject/000courseCompilation/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title>Test Website</title>
+    <title>Moto Maintainer</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
     <!-- The two links below are for Montserrat fonts -->
@@ -19,22 +19,82 @@
   </head>
 
   <body>
-      <div class="container cont">
-        <p>Number <span class="changeable" id="firstnum">1</span></p>
-        <p>Number <span class="changeable" id="secondletter">2</span></p>
-        <p>Number <span class="changeable" id="thirdletter">3</span></p>
-        <p>Number <span class="changeable" id="fourthletter">4</span></p>
-        <p>Number <span class="changeable" id="fifthletter">5</span></p>
+    <section id="title">
+      <div class="container-fluid title-container container">
+        <h1>Moto Maintainer</h1>
+      </div>
+
+    </section>
+
+
+    <section id="bike-selection">
+      <div class="container-fluid title-container container">
+        <form action="search">
+          <h3 id="bike-selection-title">Enter your Motorcycle Name and Year Here</h4>
+          <input id="search-input" type="search" placeholder="Search...">
+          <img class="bike-image" src="images/r3.webp" alt="motorcycle">
+        </form>
+      </div>
+
+    </section>
+
+    <section id="specifications">
+      <div class="container-fluid specifications-container container">
+        <h2>Specifications</h2>
+
+        <div id="engine" class="specifications-list">
+          <h3>Engine</h3>
+          <ul>
+            <li>Displacement: 300cc</li>
+            <li>Horsepower: 35hp</li>
+            <li>Oil Capacity: ?</li>
+          </ul>
+        </div>
+
+        <div id="suspension" class="specifications-list">
+          <h3>Suspension</h3>
+          <ul>
+            <li>Front-Shock: Olihns</li>
+            <li>Rear-Shock: misc</li>
+            <li>Sag Setting: 3cm</li>
+          </ul>
+        </div>
+
+        <div id="chassis" class="specifications-list">
+          <h3>Chassis</h3>
+          <ul>
+            <li>Wheelbase: 300cm</li>
+            <li>Seat Height: 87cm</li>
+            <li>Wet Weight: 399lbs</li>
+          </ul>
+
+        </div>
 
       </div>
-      <div class="container-fluid cont">
-        <p>Letter <span class="changeable" id="firstletter">a</span></p>
-        <p>Letter <span class="changeable" id="secondletter">b</span></p>
-        <p>Letter <span class="changeable" id="thirdletter">c</span></p>
-        <p>Letter <span class="changeable" id="fourthletter">d</span></p>
-        <p>Letter <span class="changeable" id="fifthletter">e</span></p>
+    </section>
+
+    <section id="maintenance-schedule">
+      <div class="container-fluid maintenance-schedule-container container">
+        <h2>Specifications</h2>
+
+        <div id="annual maintenance" class="specifications-list">
+          <h3>Annual Maintenance</h3>
+          <ul>
+            <li>Grease Bearings</li>
+            <li>Clean and grease suspension linkage</li>
+          </ul>
+        </div>
+
+        <div id="regular-maintenance" class="specifications-list">
+          <h3>Regular Maintenance</h3>
+          <ul>
+            <li>Oil Changes: every 5000km</li>
+            <li>Valve Clearance check: every 6000km</li>
+          </ul>
+        </div>
 
       </div>
+    </section>
 
       
 
@@ -43,7 +103,7 @@
 
     <footer id="footer">
 
-      <p>© Copyright 2018 TinDog</p>
+      <p>© Copyright 2021 Moto Maintainer</p>
 
     </footer>
 
