--- a/classproject/005tindog/TinDog-Start-master/index.html
+++ b/classproject/005tindog/TinDog-Start-master/index.html
@@ -26,7 +26,7 @@
 
 <body>
   <section id="title">
-    <div class="container-fluid title-containter">
+    <div class="container-fluid title-container">
 
       <!-- Nav Bar -->
       <nav class="navbar navbar-expand-lg navbar-dark">
