--- a/classproject/005tindog/TinDog-Start-master/index.html
+++ b/classproject/005tindog/TinDog-Start-master/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-  <section id="title">
+  <section id="title" class="colored-section">
     <div class="container-fluid title-container">
 
       <!-- Nav Bar -->
@@ -90,7 +90,7 @@
 
   <!-- Features -->
 
-  <section id="features">
+  <section id="features" class="white-section">
     <div class="row">
 
       <div class="col-lg-4 feature">
@@ -125,7 +125,7 @@
   <!-- Testimonials -->
 
   <!-- <section id="testimonials"> -->
-  <section id="testimonial-carousel" class="carousel slide" data-interval="false" data-pause="hover">
+  <section id="testimonial-carousel" class="carousel slide colored-section" data-interval="false" data-pause="hover">
     <ol class="carousel-indicators">
       <li data-target="#testimoni" data-slide-to="0" class="active"></li>
       <li data-target="#testimoni" data-slide-to="1"></li>
@@ -172,7 +172,7 @@
 
   <!-- Press -->
 
-  <section id="press">
+  <section id="press" class="colored-section">
     <!-- techcrunch image broken link -->
     <!-- <img src="images/techcrunch.png" alt="tc-logo"> -->
     <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
@@ -184,7 +184,7 @@
 
   <!-- Pricing -->
 
-  <section id="pricing">
+  <section id="pricing" class="white-section">
 
     <div class="text-center pricing-header">
       <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
@@ -248,7 +248,7 @@
 
   <!-- Call to Action -->
 
-  <section id="cta">
+  <section id="cta" class="colored-section section-large-padding">
 
     <h3 class="cta-heading">Find the True Love of Your Dog's Life Today.</h3>
     <button type="button" class="cta-button btn btn-lg btn-dark"><i class="fab fa-apple"></i> Download</button>
@@ -259,7 +259,7 @@
 
   <!-- Footer -->
 
-  <footer id="footer">
+  <footer id="footer" class="white-section section-small-padding">
     <p><i class="fab fa-twitter"></i> <i class="fab fa-facebook-f"></i> <i class="fab fa-instagram"></i> <i class="fas fa-envelope"></i></p>
 
     <p>© Copyright 2018 TinDog</p>
